<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.android.systemui.screenshot.PathImageView
        android:id="@+id/path_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:padding="0dp" />

        <LinearLayout
        android:id="@+id/control_view"
        android:layout_width="fill_parent"
        android:layout_height="78dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bg"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

           <TextView
            android:id="@+id/btn_exit"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableTop="@drawable/button_exit"
            android:gravity="center_horizontal"
            android:shadowColor="#000000"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:layout_weight="1"
            android:text="@string/status_bar_screenshot_exit"
            android:textColor="#ffffffff"
            android:textSize="14dp" /> 
  
        
        <TextView
            android:id="@+id/btn_share"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableTop="@drawable/button_share"
            android:gravity="center_horizontal"
            android:shadowColor="#000000"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:layout_weight="1"
            android:text="@string/status_bar_screenshot_share"
            android:textColor="#ffffffff"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/btn_edit"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableTop="@drawable/button_edit"
            android:gravity="center_horizontal"
            android:shadowColor="#000000"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:layout_weight="1"
            android:text="@string/status_bar_screenshot_edit"
            android:textColor="#ffffffff"
            android:textSize="14dp" />


		<TextView
            android:id="@+id/btn_long_screenshot"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableTop="@drawable/button_long_screenshot"
            android:gravity="center_horizontal"
            android:shadowColor="#000000"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:layout_weight="1"
            android:text="@string/status_bar_screenshot_long"
            android:textColor="#ffffffff"
            android:textSize="14dp" 
            android:singleLine="false"
            android:visibility="gone"/>
		

		
        <TextView
            android:id="@+id/btn_save"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableTop="@drawable/button_save"
            android:gravity="center_horizontal"
            android:shadowColor="#000000"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:layout_weight="1"
            android:text="@string/status_bar_screenshot_save"
            android:textColor="#ffffffff"
            android:textSize="14dp" />
          <TextView
            android:id="@+id/btn_interesting"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:drawableTop="@drawable/button_interesting_screenshot"
            android:gravity="center_horizontal"
            android:shadowColor="#000000"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:layout_weight="1"
            android:text="@string/status_bar_screenshot_interesting"
            android:textColor="#ffffffff"
            android:textSize="14dp" 
            android:singleLine="false"
            android:visibility="gone"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:background="@drawable/button_turnoff"
        android:visibility="gone"
         />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:padding="0dp" />

</FrameLayout>